Fix PWA Builder issues: service worker registration, manifest structure, and add maskable icons support

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHGJHQM9CG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XHGJHQM9CG');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
@@ -73,14 +82,26 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./sw.js')
-                    .then(registration => {
-                        console.log('SW registered: ', registration);
-                    })
-                    .catch(registrationError => {
-                        console.log('SW registration failed: ', registrationError);
-                    });
+                // Add timeout to prevent hanging
+                const swRegistration = navigator.serviceWorker.register('./sw.js', {
+                    scope: './'
+                });
+                
+                swRegistration.then(registration => {
+                    console.log('SW registered successfully: ', registration);
+                }).catch(registrationError => {
+                    console.log('SW registration failed: ', registrationError);
+                });
+                
+                // Add timeout fallback
+                setTimeout(() => {
+                    if (!navigator.serviceWorker.controller) {
+                        console.log('Service worker registration timed out, but app will still work');
+                    }
+                }, 5000);
             });
+        } else {
+            console.log('Service worker not supported');
         }
     </script>
 </body>
